# HasteBoots

./: Cargo.toml  README.md
.github/workflows/: rust.yml
algebra/: Cargo.toml
algebra/benches/: modulus_bench.rs  ntt_bench.rs  sample.rs
algebra/examples/: field.rs
algebra/src/: decompose_basis.rs  derive.rs  lib.rs  random.rs
algebra/src/baby_bear/: babybear_ntt.rs  extension.rs  mod.rs
algebra/src/extension/: binomial_extension.rs  helper.rs  mod.rs  packed.rs
algebra/src/field/: mod.rs  ntt_fields.rs
algebra/src/goldilocks/: extension.rs  goldilocks_ntt.rs  mod.rs
algebra/src/modulus/: mod.rs
algebra/src/modulus/baby_bear/: mod.rs  ops.rs
algebra/src/modulus/barrett/: internal_macros.rs  mod.rs  ops.rs
algebra/src/modulus/goldilocks/: mod.rs  ops.rs
algebra/src/modulus/powof2/: internal_macros.rs  mod.rs
algebra/src/modulus/shoup/: internal_macros.rs
algebra/src/polynomial/: mod.rs
algebra/src/polynomial/multivariate/: data_structures.rs  mod.rs
algebra/src/polynomial/multivariate/multilinear/: dense.rs  mod.rs  sparse.rs
algebra/src/polynomial/univariate/: mod.rs  native_polynomial.rs  ntt_polynomial.rs
algebra/src/primitive/: bits.rs  bounded.rs  cast.rs  mod.rs  neg_one.rs  wrapping.rs
algebra/src/primitive/widening/: borrowing_sub.rs  carrying_add.rs  carrying_mul.rs  mod.rs  widening_mul.rs
algebra/src/reduce/: lazy_ops.rs  macros.rs  mod.rs  ops.rs
algebra/src/transformation/: concrete.rs  mod.rs  ntt_table.rs
algebra/src/utils/: aes.rs  block.rs  gcd.rs  mod.rs  prg.rs  prime.rs  sample.rs  sse2neon.rs  transcript.rs
algebra/tests/: derive_test.rs  extension_test.rs  polynomial_test.rs
algebra_derive/: Cargo.toml
algebra_derive/src/: ast.rs  attr.rs  basic.rs  decomposable_field.rs  fhe_field.rs  field.rs  lib.rs  ntt.rs  ops.rs
helper/: Cargo.toml
helper/src/: lib.rs  transcript.rs
pcs/: Cargo.toml
pcs/benches/: brakedown_pcs.rs
pcs/examples/: brakedown_pcs.rs
pcs/src/: lib.rs
pcs/src/multilinear/: mod.rs
pcs/src/multilinear/brakedown/: data_structure.rs  mod.rs
pcs/src/utils/: arithmetic.rs  hash.rs  merkle_tree.rs  mod.rs
pcs/src/utils/code/: expander.rs  mod.rs  reedsolomon.rs
pcs/tests/: test_code.rs  test_pcs.rs
piop/: Cargo.toml
piop/examples/: accumulator.rs  addition_in_zq.rs  bit_decomposition.rs  external_product.rs  floor.rs  lift.rs  lookup.rs  ntt.rs  round.rs
piop/src/: accumulator.rs  addition_in_zq.rs  bit_decomposition.rs  external_product.rs  floor.rs  lib.rs  lift.rs  lookup.rs  round.rs  utils.rs
piop/src/ntt/: mod.rs  ntt_bare.rs
piop/tests/: test_accumulator.rs  test_addition_in_zq.rs  test_bit_decomposition.rs  test_external_product.rs  test_floor.rs  test_lift.rs  test_lookup.rs  test_ntt.rs  test_round.rs  test_sumcheck.rs
poly/: Cargo.toml
poly/src/: data_structures.rs  lib.rs
poly/src/multilinear/: dense.rs  mod.rs  sparse.rs
poly/src/tests/: multivariate_test.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  verifier.rs
zkp/: Cargo.toml
zkp/benches/: range_check_bit_decomposition.rs  range_check_lookup.rs
zkp/examples/: accumulator.rs  addition_in_zq.rs  bit_decomposition.rs  external_product.rs  floor.rs  lift.rs  lookup.rs  ntt.rs  round.rs
zkp/src/: error.rs  lib.rs
zkp/src/piop/: accumulator.rs  addition_in_zq.rs  bit_decomposition.rs  external_product.rs  floor.rs  lift.rs  lookup.rs  mod.rs  round.rs
zkp/src/piop/ntt/: mod.rs  ntt_bare.rs
zkp/src/sumcheck/: mod.rs  prover.rs  verifier.rs
zkp/tests/: test_accumulator.rs  test_addition_in_zq.rs  test_bit_decomposition.rs  test_external_product.rs  test_floor.rs  test_lift.rs  test_lookup.rs  test_ntt.rs  test_round.rs  test_sumcheck.rs
