[workspace]

members = ["algebra", "algebra_derive", "helper", "pcs", "piop", "poly", "sumcheck"]

resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
num-traits = "0.2"
once_cell = "1.19"
rand = "0.8"
rand_distr = "0.4"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
rayon = "1"
bytemuck = { version = "1.13", features = ["derive"] }
merlin = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
itertools = "0.13"
sha2 = { version = "0.10" }
mimalloc = "0.1"

criterion = "0.5"

[profile.bench]
lto = true
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
