[package]
name = "pcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { path = "../algebra" }

thiserror = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }

[target.'cfg(all(unix, any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
sha2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "brakedown_pcs"
harness = false
